--- a/app/globals.css
+++ b/app/globals.css
@@ -52,3 +52,7 @@ textarea:focus, input:focus, select:focus{
   outline: none;
   box-shadow: none;
 }
+
+/* #drawing-board {
+  transform: scale(2,2)
+} */
