--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,11 @@ body {
   background-color: teal;
 }
 
+.highlight:hover {
+  background-color: #0e0a86 !important;
+  color: white;
+}
+
 p {
   font-family: 'Pixelated MS Sans Serif';
 }
